BAA link updated.

--- a/data/nav_primary.yaml
+++ b/data/nav_primary.yaml
@@ -65,7 +65,7 @@ nav_company_b:
         desc: "Our company policies"
     -
         title: "Our BAA"
-        url: "https://training.datica.com"
+        url: "https://policy.datica.com/#23-datica-hipaa-business-associate-agreement-baa"
         desc: "Our training policies"
     -
         title: "HIPAA Mappings"
