Building new nav from scratch, based on ZF menus. We'll see.

--- a/data/footer_main.yaml
+++ b/data/footer_main.yaml
@@ -7,6 +7,7 @@
             title: "Datica Platform"
             url: "/platform"
             desc: "The cloud enablement layer for all healthcare applications"
+            nav_main: true
         -
             title: "Technology Overview"
             url: "/platform/technology"
@@ -27,11 +28,45 @@
             title: "Services"
             url: "/services"
             desc: "Professional services offered by Datica"
+            nav_main: true
         -
             title: "Pricing"
             url: "/pricing"
             desc: "Pricing for the Datica platform"
-
+            nav_main: true
+-
+    title: "Resources"
+    url:
+    desc:
+    children:
+        -
+            title: "Digital Health Success Framework"
+            url: "/dhsf"
+            desc: "The framework for teams building digital health products"
+        -
+            title: "Discover: Healthcare Topics"
+            url: "/discover"
+            desc: "A Curated Collection of Healthcare Technology Topics from Datica"
+        -
+            title: "The Academy"
+            url: "/academy"
+            desc: "The definitive resource for those looking to learn about Compliance and Interoperability"
+        -
+            title: "Healthcare Innovators Podcast"
+            url: "/innovation"
+            desc: "How does healthcare innovate?"
+        -
+            title: "White Papers"
+            url: "/whitepapers"
+            desc: "A collection of our formal assessment of healthcare topics"
+        -
+            title: "Mock FHIR API"
+            url: "https://fhir.datica.com"
+            desc: "Experiment with the FHIR API for free"
+        -
+            title: "Mock HL7 API"
+            url: "https://hl7.datica.com"
+            desc: "Experiment with the HL7 API for free"
 -
     title: "Company"
     url:
@@ -69,39 +104,6 @@
             title: "Open Source"
             url: "/open-source"
             desc: "We believe in the importance of open source."
--
-    title: "Resources"
-    url:
-    desc:
-    children:
-        -
-            title: "Digital Health Success Framework"
-            url: "/dhsf"
-            desc: "The framework for teams building digital health products"
-        -
-            title: "Discover: Healthcare Topics"
-            url: "/discover"
-            desc: "A Curated Collection of Healthcare Technology Topics from Datica"
-        -
-            title: "The Academy"
-            url: "/academy"
-            desc: "The definitive resource for those looking to learn about Compliance and Interoperability"
-        -
-            title: "Healthcare Innovators Podcast"
-            url: "/innovation"
-            desc: "How does healthcare innovate?"
-        -
-            title: "White Papers"
-            url: "/whitepapers"
-            desc: "A collection of our formal assessment of healthcare topics"
-        -
-            title: "Mock FHIR API"
-            url: "https://fhir.datica.com"
-            desc: "Experiment with the FHIR API for free"
-        -
-            title: "Mock HL7 API"
-            url: "https://hl7.datica.com"
-            desc: "Experiment with the HL7 API for free"
 -
     title: "Help"
     url:
