--- a/data/footer_main.yaml
+++ b/data/footer_main.yaml
@@ -48,9 +48,9 @@
             url: "/innovation"
             desc: "Home of the Healthcare Innovators Podcast, In-depth Reports, and More"
         -
-            title: "The Academy"
+            title: "HIPAA Academy"
             url: "/academy"
-            desc: "The definitive resource for those looking to learn about Compliance and Interoperability"
+            desc: "The definitive resource for those looking to learn about compliance and interoperability"
             has_divider: true
         -
             title: "Discover: Healthcare Topics"
@@ -60,6 +60,7 @@
             title: "White Papers"
             url: "/whitepapers"
             desc: "A collection of our formal assessment of healthcare topics"
+            has_divider: true
         -
             title: "Mock FHIR API"
             url: "https://fhir.datica.com"
@@ -82,17 +83,10 @@
             url: "/leadership"
             desc: "The team guiding Datica"
         -
-            title: "Company Blog"
-            url: "/blog"
-            desc: "News and notes from the Datica team"
-        -
-            title: "Engineering Blog"
-            url: "https://help.datica.com/hc/en-us/sections/115001646346-Engineering-Blog"
-            desc: "Our engineering team shares bleeding-edge insight on what it takes to build a compliant platform"
-        -
             title: "Careers"
             url: "/careers"
             desc: "Job opportunities at Datica"
+            has_divider: true
         -
             title: "Press"
             url: "/press"
@@ -105,6 +99,15 @@
             title: "Open Source"
             url: "/open-source"
             desc: "We believe in the importance of open source."
+            has_divider: true
+        -
+            title: "Engineering Blog"
+            url: "https://help.datica.com/hc/en-us/sections/115001646346-Engineering-Blog"
+            desc: "Our engineering team shares bleeding-edge insight on what it takes to build a compliant platform"
+        -
+            title: "Company Blog"
+            url: "/blog"
+            desc: "News and notes from the Datica team"
 -
     title: "Help"
     url:
