--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "babel-cli": "^6.23.0",
     "browser-sync": "^2.18.8",
     "glob": "^7.1.1",
+    "hoek": "^5.0.3",
     "node-sass": "^4.5.0",
     "onchange": "^3.2.1",
     "parallelshell": "^2.0.0",
