--- a/data/footer_main.yaml
+++ b/data/footer_main.yaml
@@ -8,14 +8,14 @@
             url: "/platform"
             desc: "The Datica Platform is a cloud enablement layer for all healthcare applications"
             nav_main: true
-        -
-            title: "Technology Overview"
-            url: "/platform/technology"
-            desc: "The technology support and capabilities of the Datica platform"
-        -
-            title: "Data Integration"
-            url: "/platform/technology/#integration"
-            desc: "The full-stack integration toolset for developers"
+        # -
+        #     title: "Technology Overview"
+        #     url: "/platform/technology"
+        #     desc: "The technology support and capabilities of the Datica platform"
+        # -
+        #     title: "Data Integration"
+        #     url: "/platform/technology/#integration"
+        #     desc: "The full-stack integration toolset for developers"
         -
             title: "Compliance Story"
             url: "/platform/compliance"
