--- a/netlify.toml
+++ b/netlify.toml
@@ -17,11 +17,11 @@
 
 [[redirects]]
   from = "/platform/integration"
-  to = "/platform/technology/#integration"
+  to = "/blog/if-its-possible-we-can-integrate-it/"
 
 [[redirects]]
   from = "/integration"
-  to = "/platform/technology/#integration"
+  to = "/blog/if-its-possible-we-can-integrate-it/"
 
 [[redirects]]
   from = "support.catalyze.io"
@@ -100,7 +100,7 @@
 
 [[redirects]]
   from = "/managed-integration"
-  to = "/platform/technology/#integration"
+  to = "/blog/if-its-possible-we-can-integrate-it/"
   status = 301
 
 [[redirects]]
@@ -120,7 +120,7 @@
 
 [[redirects]]
   from = "/redpoint"
-  to = "/platform/technology/#integration"
+  to = "/blog/if-its-possible-we-can-integrate-it/"
   status = 301
 
 [[redirects]]
