--- a/data/footer_main.yaml
+++ b/data/footer_main.yaml
@@ -60,7 +60,19 @@
             title: "White Papers"
             url: "/whitepapers"
             desc: "A collection of our formal assessment of healthcare topics"
+        -
+            title: "Open Source"
+            url: "/open-source"
+            desc: "We believe in the importance of open source."
             has_divider: true
+        -
+            title: "Engineering Blog"
+            url: "https://help.datica.com/hc/en-us/sections/115001646346-Engineering-Blog"
+            desc: "Product news and updates."
+        -
+            title: "Company Blog"
+            url: "/blog"
+            desc: "News and insights from the Datica team."
 -
     title: "Company"
     url:
@@ -87,19 +99,6 @@
             title: "Events"
             url: "/events"
             desc: "Datica events, past and future."
-        -
-            title: "Open Source"
-            url: "/open-source"
-            desc: "We believe in the importance of open source."
-            has_divider: true
-        -
-            title: "Engineering Blog"
-            url: "https://help.datica.com/hc/en-us/sections/115001646346-Engineering-Blog"
-            desc: "Our engineering team shares bleeding-edge insight on what it takes to build a compliant platform"
-        -
-            title: "Company Blog"
-            url: "/blog"
-            desc: "News and notes from the Datica team"
 -
     title: "Help"
     url:
