--- a/data/footer_main.yaml
+++ b/data/footer_main.yaml
@@ -8,14 +8,6 @@
             url: "/platform"
             desc: "The Datica Platform is a cloud enablement layer for all healthcare applications"
             nav_main: true
-        # -
-        #     title: "Technology Overview"
-        #     url: "/platform/technology"
-        #     desc: "The technology support and capabilities of the Datica platform"
-        # -
-        #     title: "Data Integration"
-        #     url: "/platform/technology/#integration"
-        #     desc: "The full-stack integration toolset for developers"
         -
             title: "Compliance Story"
             url: "/platform/compliance"
@@ -48,7 +40,7 @@
             url: "/innovation"
             desc: "Home of the Healthcare Innovators Podcast, In-depth Reports, and More"
         -
-            title: "HIPAA Academy"
+            title: "Datica Academy"
             url: "/academy"
             desc: "The definitive resource for those looking to learn about compliance and interoperability"
             has_divider: true
@@ -57,18 +49,10 @@
             url: "/discover"
             desc: "A Curated Collection of Healthcare Technology Topics from Datica"
         -
-            title: "White Papers"
-            url: "/whitepapers"
-            desc: "A collection of our formal assessment of healthcare topics"
-        -
             title: "Open Source"
             url: "/open-source"
             desc: "We believe in the importance of open source."
             has_divider: true
-        -
-            title: "Engineering Blog"
-            url: "https://help.datica.com/hc/en-us/sections/115001646346-Engineering-Blog"
-            desc: "Product news and updates."
         -
             title: "Company Blog"
             url: "/blog"
