Added sections below. Request-feature button/card now below.

--- a/data/footer_main.yaml
+++ b/data/footer_main.yaml
@@ -98,7 +98,7 @@
             desc: "Documentation & Support across all Datica products"
         -
             title: "System Status"
-            url: "http://status.catalyze.io"
+            url: "http://status.datica.com/"
             desc: "System up time and alerts"
 -
     title: "Legal"
