--- a/netlify.toml
+++ b/netlify.toml
@@ -10,10 +10,13 @@
   [headers.values]
     Referrer-Policy = "same-origin"
     X-Content-Type-Options = "nosniff"
-    X-Frame-Options = "SAMEORIGIN"
     X-XSS-Protection = "1; mode=block"
-    strict-transport-security = "max-age=31536000; includeSubDomains"
+    Strict-Transport-Security = "max-age=31536000; includeSubDomains"
+    Content-Security-Policy = "frame-ancestors 'self'"
     # Content-Security-Policy-Report-Only = "default-src https: 'unsafe-inline' 'unsafe-eval'"
+    Link = '''
+    </public/css/seldon.css>; rel=preload; as=style, \
+    </fonts/gt-america-regular.woff>; rel=preload; as=font'''
 
 [[redirects]]
   from = "/platform/integration"
