--- a/netlify.toml
+++ b/netlify.toml
@@ -15,8 +15,11 @@
     Content-Security-Policy = "frame-ancestors 'self'"
     # Content-Security-Policy-Report-Only = "default-src https: 'unsafe-inline' 'unsafe-eval'"
     Link = '''
-    </public/css/seldon.css>; rel=preload; as=style, \
-    </fonts/gt-america-regular.woff>; rel=preload; as=font'''
+    </public/css/seldon.css>;rel=preload;as=style, \
+    </public/js/jquery.js>;rel=preload;as=script, \
+    </public/js/foundation.min.js>;rel=preload;as=script, \
+    </fonts/gt-america-regular.woff>;rel=preload;as=font;type=font/woff;crossorigin, \
+    </fonts/gt-america-light.woff>;rel=preload;as=font;type=font/woff;crossorigin'''
 
 [[redirects]]
   from = "/platform/integration"
