--- a/netlify.toml
+++ b/netlify.toml
@@ -15,6 +15,10 @@
     Content-Security-Policy = "frame-ancestors 'self'"
     # Content-Security-Policy-Report-Only = "default-src https: 'unsafe-inline' 'unsafe-eval'"
     Link = '''
+    <//images.ctfassets.net>;rel=dns-prefetch, \
+    <fast.wistia.com>;rel=dns-prefetch, \
+    <fast.wistia.com>;rel=preconnect, \
+    <//images.ctfassets.net>;rel=preconnect, \
     </public/css/seldon.css>;rel=preload;as=style, \
     </public/js/jquery.js>;rel=preload;as=script, \
     </public/js/foundation.min.js>;rel=preload;as=script, \
