--- a/source/manifest.json
+++ b/source/manifest.json
@@ -1,5 +1,6 @@
 {
-    "name": "",
+    "short_name": "Datica",
+    "name": "Datica Health, Inc.",
     "icons": [
         {
             "src": "/android-chrome-192x192.png",
