--- a/package.json
+++ b/package.json
@@ -5,11 +5,8 @@
     "env": "development"
   },
   "scripts": {
-    "content": "bundle exec middleman contentful",
-    "build": "npm run styles & npm run uglify & npm run images & npm run fonts",
     "build:production": "npm run build --datica.com:env=production",
     "browsersync": "browser-sync start --config ./bs-config.js",
-    "serve": "parallelshell 'npm run browsersync' 'npm run watch:css' 'npm run watch:js' 'npm run watch:images' 'npm run watch:fonts'",
     "watch:css": "onchange 'source/assets/scss/**/*.scss' -- npm run styles",
     "watch:js": "onchange 'source/assets/js/**/*.js' -- npm run uglify",
     "watch:images": "onchange 'source/assets/{img,icons}/**/*' -- npm run images",
@@ -23,7 +20,10 @@
     "images": "npm run images:img & npm run images:icons",
     "images:img": "mkdir -p .tmp/public/img && cp -r source/assets/img/* .tmp/public/img",
     "images:icons": "mkdir -p .tmp/public/icons && cp -r source/assets/icons/* .tmp/public/icons",
-    "fonts": "mkdir -p .tmp/public/fonts && cp -r source/assets/fonts/* .tmp/public/fonts"
+    "fonts": "mkdir -p .tmp/public/fonts && cp -r source/assets/fonts/* .tmp/public/fonts",
+    "content": "bundle exec middleman contentful",
+    "build": "npm run styles & npm run uglify & npm run images & npm run fonts",
+    "serve": "npm-run-all browsersync watch:** --parallel"
   },
   "repository": {
     "type": "git",
@@ -34,9 +34,10 @@
   "dependencies": {
     "animejs": "^1.1.3",
     "foundation-sites": "6.4.3",
+    "jquery": "~3.2.1",
     "motion-ui": "~1.2.3",
-    "svg-injector": "^1.1.3",
-    "jquery": "~3.2.1"
+    "npm": "^6.1.0",
+    "svg-injector": "^1.1.3"
   },
   "devDependencies": {
     "babel-cli": "^6.23.0",
@@ -44,6 +45,7 @@
     "glob": "^7.1.1",
     "hoek": "^5.0.3",
     "node-sass": "^4.5.0",
+    "npm-run-all": "^4.1.3",
     "onchange": "^3.2.1",
     "parallelshell": "^2.0.0",
     "uglify-js": "^2.8.0"
