Minor change to help URL, might avoid a redir

--- a/data/footer_main.yaml
+++ b/data/footer_main.yaml
@@ -94,7 +94,7 @@
             desc: "Sign in to your dashboard"
         -
             title: "Documentation & Support"
-            url: "https://help.datica.com"
+            url: "https://help.datica.com/hc/en-us"
             desc: "Documentation & Support across all Datica products"
         -
             title: "System Status"
