--- a/data/nav_combo.yaml
+++ b/data/nav_combo.yaml
@@ -100,11 +100,11 @@ nav_primary:
         children:
             -
                 title: "Documentation"
-                url: "https://help.datica.com"
+                url: "https://help.datica.com/hc/en-us"
                 desc: "Documentation across all Datica products"
             -
                 title: "Support"
-                url: "https://help.datica.com"
+                url: "https://help.datica.com/hc/en-us"
                 desc: "Support for Datica customers"
             -
                 title: "System Status"
