--- a/netlify.toml
+++ b/netlify.toml
@@ -11,7 +11,7 @@
     Referrer-Policy = "same-origin"
     X-Content-Type-Options = "nosniff"
     X-XSS-Protection = "1; mode=block"
-    Strict-Transport-Security = "max-age=31536000; includeSubDomains"
+    Strict-Transport-Security = "max-age=31536000"
     Content-Security-Policy = "frame-ancestors 'self'"
     # Content-Security-Policy-Report-Only = "default-src https: 'unsafe-inline' 'unsafe-eval'"
     Link = '''
