--- a/package.json
+++ b/package.json
@@ -34,9 +34,10 @@
   "dependencies": {
     "animejs": "^1.1.3",
     "foundation-sites": "6.4.3",
+    "jquery": "~3.2.1",
     "motion-ui": "~1.2.3",
-    "svg-injector": "^1.1.3",
-    "jquery": "~3.2.1"
+    "npm": "^6.1.0",
+    "svg-injector": "^1.1.3"
   },
   "devDependencies": {
     "babel-cli": "^6.23.0",
